applications/scratch-2303883/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: scratch-2303883
  namespace: scratch

spec:
  replicas: 1

  selector:
    matchLabels:
      app: scratch-2303883

  template:
    metadata:
      labels:
        app: scratch-2303883

    spec:
      containers:
      - name: scratch-2303883
        image: scratch:latest

        ports:
        - containerPort: 80
