applications/scratch-2303883/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: scratch-2303883
  namespace: scratch

spec:
  selector:
    app: scratch-2303883

  ports:
  - port: 80
    targetPort: 80

  type: ClusterIP
