applications/scratch-2303883/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: scratch-2303883
  namespace: scratch

spec:
  ingressClassName: traefik

  rules:
  - host: scratch-2303883.lab.local

    http:
      paths:
      - path: /

        pathType: Prefix

        backend:
          service:
            name: scratch-2303883

            port:
              number: 80
